test/tests/errors/error-div-zero-float.sm
// true
// true
// false
/**/
/**/

program {
    var x: float = 5.0 / 0.0;
    output x;
}